<resources>
    <string name="app_name">Start</string>
    <string name="title_activity_tabbed">Tabbed</string>
    <string name="tab_text_1">Tab 1</string>
    <string name="tab_text_2">Tab 2</string>

    <string name="toastForNone1">呐，才不要什么都不输入呢!></string>
    <string name="toastForNone2">就算是输入空格也没有用的呢</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_basic">basic</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="title_activity_floating">floating</string>
    <string name="title_activity_login">LoginActivity</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome !"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>

    <!-- login and register strings -->
    <!-- login -->
    <string name="account_login">账户</string>
    <string name="password_login">密码</string>
    <string name="account_hint_login">请输入用户名</string>
    <string name="password_hint_login">请输入密码</string>
    <string name="login_button">登录</string>
    <string name="visitor_button">游客登陆</string>
    <string name="remember_me">记住密码</string>

    <!-- register -->
    <string name="to_register_button">注册</string>
    <string name="account_register">用户名</string>
    <string name="password_register">密码</string>
    <string name="account_hint_register">请输入用户名</string>
    <string name="password1_register">请输入密码</string>
    <string name="password2_register">请确认密码</string>
    <string name="register_button">注册</string>
    <string name="back_button">返回</string>
    <string name="title_activity_show_big_picture">MainActivity</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
</resources>
