<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="60sp"
            android:gravity="center_vertical"
            android:text="@string/account_register"
            android:textSize="20sp"/>

        <EditText
            android:id="@+id/account_register"
            android:layout_width="0dp"
            android:layout_height="60sp"
            android:hint="@string/account_hint_register"
            android:layout_weight="1"
            android:textSize="20sp"
            android:gravity="center_vertical"
            android:autofillHints="Please input your name"
            android:inputType="none" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="60sp"
            android:gravity="center_vertical"
            android:text="@string/password_register"
            android:textSize="20sp"/>

        <EditText
            android:id="@+id/password1_register"
            android:layout_width="0dp"
            android:layout_height="60sp"
            android:hint="@string/password1_register"
            android:layout_weight="1"
            android:inputType="textPassword"
            android:textSize="20sp"
            android:gravity="center_vertical"
            android:autofillHints="none" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="60sp"
            android:gravity="center_vertical"
            android:text="@string/password_register"
            android:textSize="20sp"/>

        <EditText
            android:id="@+id/password2_register"
            android:layout_width="0dp"
            android:layout_height="60sp"
            android:hint="@string/password2_register"
            android:layout_weight="1"
            android:inputType="textPassword"
            android:textSize="20sp"
            android:gravity="center_vertical"
            android:autofillHints="none" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <Button
            android:id="@+id/register_button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/register_button"
            android:textSize="20sp"
            android:layout_gravity="bottom"
            android:layout_weight="1"
            tools:ignore="ButtonStyle" />

        <Button
            android:id="@+id/back_button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/back_button"
            android:textSize="20sp"
            android:layout_gravity="bottom"
            android:layout_weight="1"
            tools:ignore="ButtonStyle" />
    </LinearLayout>

</LinearLayout>